src/test/compile-fail/unboxed-closure-sugar-wrong-number-number-type-parameters-1.rs
// Licensed under the Apache License, Version 2.0 <LICENSE-APACHE or
// http://www.apache.org/licenses/LICENSE-2.0> or the MIT license
// <LICENSE-MIT or http://opensource.org/licenses/MIT>, at your
// option. This file may not be copied, modified, or distributed
// except according to those terms.

#![feature(unboxed_closures)]

trait One<A> { fn foo(&self) -> A; }

fn foo(_: &One()) //~ ERROR wrong number of type arguments
{}

fn main() { }
